--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Digital Clock</title>
 </head>
-<body>
+<body id="container">
     <div class="clock">
         <div id="hours">00</div>
         <span>:</span>
